fix: overflow

--- a/src/less/page/page.less
+++ b/src/less/page/page.less
@@ -21,5 +21,5 @@ a {
 }
 
 .table {
-  overflow: scroll;
+  overflow-x: scroll;
 }
